--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,23 +1,19 @@
-name: Notify Bundle Sync Repo
+# .github/workflows/dispatch.yml
+name: Dispatch to Bundle-Sync
 
 on:
   push:
-    paths:
-      - 'bundle/**'
-      - 'Dockerfiles/bundle.Dockerfile'
     branches:
-      - 'rhoai-2.*'  # Adjust this to your branch pattern
+      - 'rhoai-*'  # Adjust as needed for your branches
 
 jobs:
   dispatch:
     runs-on: ubuntu-latest
     steps:
-      - name: Notify bundle-sync repo
-        uses: octokit/request-action@v2.x
-        with:
-          route: POST /repos/{owner}/{repo}/dispatches
-          owner: DevOps-automation-tasks
-          repo: bundle-sync
-          event_type: sync-bundle
-          client_payload: '{"ref": "${{ github.ref }}"}'
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Send repository_dispatch to bundle-sync
+        run: |
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.everest-preview+json" \
+            https://api.github.com/repos/DevOps-automation-tasks/bundle-sync/dispatches \
+            -d '{"event_type": "sync", "client_payload": { "branch": "${GITHUB_REF#refs/heads/}" }}'
