--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Send repository_dispatch to bundle-sync
         run: |
           curl -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: token ${{ secrets.BUNDLE_SYNC_TOKEN }}" \
             -H "Accept: application/vnd.github.everest-preview+json" \
             https://api.github.com/repos/DevOps-automation-tasks/bundle-sync/dispatches \
             -d '{"event_type": "sync", "client_payload": { "branch": "${GITHUB_REF#refs/heads/}" }}'
