--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,20 @@
-name: Trigger Sync Workflow
+name: Trigger Bundle Sync
 
 on:
   push:
+    paths:
+      - 'bundle/**'
+      - 'Dockerfiles/bundle.Dockerfile'
     branches:
       - 'rhoai-*'
 
 jobs:
-  trigger:
+  trigger_sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger Workflow in Bundle-Sync Repo
+      - name: Trigger sync in bundle-sync repository
         run: |
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.BUNDLE_SYNC_TOKEN }}" \
-            -H "Accept: application/vnd.github.everest-preview+json" \
-            https://api.github.com/repos/DevOps-automation-tasks/bundle-sync/dispatches \
-            -d '{"event_type": "sync", "client_payload": { "branch": "${{ github.ref_name }}" }}'
-        env:
-          PAT: ${{ secrets.BUNDLE_SYNC_TOKEN }}
+          curl -X POST https://api.github.com/repos/DevOps-automation-tasks/bundle-sync/dispatches \
+          -H "Accept: application/vnd.github.v3+json" \
+          -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+          -d '{"event_type": "sync", "client_payload": {"branch": "${{ github.ref }}"}}'
