--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,12 @@
-name: 01 Repo
+name: Sync Bundle
 
 on:
   push:
     paths:
-      - 'rhods-operator/bundle/**' 
-      - 'rhods-operator/Dockerfiles/bundle.Dockerfile'
+      - 'bundle/**'  # Adjust the path to match where the bundle files are located
+      - 'Dockerfiles/bundle.Dockerfile'
     branches:
-      - 'rhoai-*'
+      - '**'
   workflow_dispatch:
     inputs:
       branch:
