--- a/.github/workflows/new-sync.yml
+++ b/.github/workflows/new-sync.yml
@@ -1,4 +1,4 @@
-name: Sync Bundle to RBC Repo
+name: Sync new Repo
 
 on:
   push:
@@ -30,14 +30,19 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: DevOps-automation-tasks/rhods-operator
-          token: ${{ secrets.BUNDLE_SYNC_TOKEN }}
+          token: ${{ secrets.AUTOMATION_SYNC }}
           ref: ${{ github.event.inputs.branch || github.ref }}
+        
+      - name: Display Files Changed
+        run: |
+          echo "Files changed in this push:"
+          git diff --name-only ${{ github.event.before }} ${{ github.event.after }}
 
       - name: Checkout RHOAI-Build-Config repo
         uses: actions/checkout@v3
         with:
           repository: DevOps-automation-tasks/RHOAI-Build-Config
-          token: ${{ secrets.BUNDLE_SYNC_TOKEN }}
+          token: ${{ secrets.AUTOMATION_SYNC }}
           path: rbc_repo
           ref: ${{ github.event.inputs.branch || github.ref }}
 
@@ -46,6 +51,7 @@ jobs:
           mkdir -p rbc_repo/bundle/
           cp -r bundle/* rbc_repo/bundle/
           cp Dockerfiles/bundle.Dockerfile rbc_repo/bundle/Dockerfile
+          echo "Files synced to RBC repo."
 
       - name: Update local branch and commit changes
         run: |
