--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,12 +1,9 @@
-name: Syn Repo
+name: Sync Bundle to RBC Repo
 
 on:
   push:
-    paths:
-      - 'bundle/**'
-      - 'Dockerfiles/bundle.Dockerfile'
     branches:
-      - '**'
+      - '**'  # Trigger on pushes to any branch
   workflow_dispatch:
     inputs:
       branch:
@@ -14,7 +11,7 @@ on:
         required: true
         type: string
   schedule:
-    - cron: '0 0 * * *'  # Adjust the schedule as needed
+    - cron: '0 0 * * *'  # Optional: Run on a schedule
 
 permissions:
   contents: read
@@ -33,9 +30,12 @@ jobs:
           token: ${{ secrets.AUTOMATION_SYNC }}
           ref: ${{ github.event.inputs.branch || github.ref }}
 
-      - name: Display Files Changed
+      - name: Debug Event Data
         run: |
-          echo "Files changed in this push:"
+          echo "Event name: ${{ github.event_name }}"
+          echo "Branch ref: ${{ github.ref }}"
+          echo "Commit message: ${{ github.event.head_commit.message }}"
+          echo "Files changed:"
           git diff --name-only ${{ github.event.before }} ${{ github.event.after }}
 
       - name: Checkout RHOAI-Build-Config repo
@@ -51,7 +51,6 @@ jobs:
           mkdir -p rbc_repo/bundle/
           cp -r bundle/* rbc_repo/bundle/
           cp Dockerfiles/bundle.Dockerfile rbc_repo/bundle/Dockerfile
-          echo "Files synced to RBC repo."
 
       - name: Update local branch and commit changes
         run: |
