--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -1,18 +1,11 @@
-name: new test repo
+name: Sync Repos
 
 on:
   push:
-    paths:
-      - 'bundle/**'
-      - 'Dockerfiles/bundle.Dockerfile'
     branches:
-      - '**'
-  workflow_dispatch:
-    inputs:
-      branch:
-        description: 'Branch to sync'
-        required: true
-        type: string
+      - '**'  # Trigger the workflow on pushes to the main branch
+    paths:
+      - '**'  # Trigger the workflow for changes to any file
 
 permissions:
   contents: read
@@ -23,45 +16,33 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout rhods-operator repo
+      - name: Checkout source repo
         uses: actions/checkout@v3
         with:
-          repository: DevOps-automation-tasks/rhods-operator
-          token: ${{ secrets.AUTOMATION_SYNC }}
-          ref: ${{ github.ref_name }}
-      
-      - name: Display Files Changed
-        run: |
-          echo "Files changed in this push:"
-          git diff --name-only ${{ github.event.before }} ${{ github.event.after }}
+          repository: source-org/source-repo
+          token: ${{ secrets.PAT_TOKEN }}
+          path: source_repo
 
-      - name: Checkout RHOAI-Build-Config repo
+      - name: Checkout target repo
         uses: actions/checkout@v3
         with:
-          repository: DevOps-automation-tasks/RHOAI-Build-Config
-          token: ${{ secrets.AUTOMATION_SYNC }}
-          path: rbc_repo
-          ref: ${{ github.ref_name }}
+          repository: target-org/target-repo
+          token: ${{ secrets.PAT_TOKEN }}
+          path: target_repo
+          # Note: Ensure the target repo is checked out to a different path than the source repo
 
-      - name: Sync bundle to RBC repo
+      - name: Sync changes
         run: |
-          mkdir -p rbc_repo/bundle/
-          cp -r bundle/* rbc_repo/bundle/
-          cp Dockerfiles/bundle.Dockerfile rbc_repo/bundle/Dockerfile
-          echo "Files synced to RBC repo."
+          mkdir -p target_repo/bundle
+          cp -r source_repo/bundle/* target_repo/bundle/
+          cp source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile
+          echo "Files synced to target repo."
 
-      - name: Update local branch and commit changes
+      - name: Commit and push changes to target repo
         run: |
-          cd rbc_repo
-          git fetch origin
-          git checkout ${{ github.ref_name }}
-          git pull origin ${{ github.ref_name }}
+          cd target_repo
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add .
-          git commit -m "Sync bundle changes from rhods-operator repo" || echo "No changes to commit"
-
-      - name: Push changes to RBC repo
-        run: |
-          cd rbc_repo
-          git push origin ${{ github.ref_name }}
+          git commit -m "Sync changes from source repo" || echo "No changes to commit"
+          git push origin main  # Push to the main branch of the target repo
