--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -19,14 +19,14 @@ jobs:
       - name: Checkout source repo
         uses: actions/checkout@v3
         with:
-          repository: source-org/source-repo
+          repository: DevOps-automation-tasks/rhods-operator.git
           token: ${{ secrets.PAT_TOKEN }}
           path: source_repo
 
       - name: Checkout target repo
         uses: actions/checkout@v3
         with:
-          repository: target-org/target-repo
+          repository: DevOps-automation-tasks/RHOAI-Build-Config.git
           token: ${{ secrets.PAT_TOKEN }}
           path: target_repo
           # Note: Ensure the target repo is checked out to a different path than the source repo
