--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -1,9 +1,60 @@
+# name: Sync Repos
+
+# on:
+#   push:
+#     branches:
+#       - '**'  # Trigger the workflow on pushes to the main branch
+#     paths:
+#       - '**'  # Trigger the workflow for changes to any file
+
+# permissions:
+#   contents: read
+#   packages: write
+#   id-token: write
+
+# jobs:
+#   sync:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout source repo
+#         uses: actions/checkout@v3
+#         with:
+#           repository: DevOps-automation-tasks/rhods-operator.git
+#           token: ${{ secrets.PAT_TOKEN }}
+#           path: source_repo
+
+#       - name: Checkout target repo
+#         uses: actions/checkout@v3
+#         with:
+#           repository: DevOps-automation-tasks/RHOAI-Build-Config.git
+#           token: ${{ secrets.PAT_TOKEN }}
+#           path: target_repo
+#           # Note: Ensure the target repo is checked out to a different path than the source repo
+
+#       - name: Sync changes
+#         run: |
+#           mkdir -p target_repo/bundle
+#           cp -r source_repo/bundle/* target_repo/bundle/
+#           cp source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile
+#           echo "Files synced to target repo."
+
+#       - name: Commit and push changes to target repo
+#         run: |
+#           cd target_repo
+#           git config user.name "GitHub Actions"
+#           git config user.email "actions@github.com"
+#           git add .
+#           git commit -m "Sync changes from source repo" || echo "No changes to commit"
+#           git push origin main  # Push to the main branch of the target repo
+
+02
+
 name: Sync Repos
 
 on:
   push:
     branches:
-      - '**'  # Trigger the workflow on pushes to the main branch
+      - '*'  # Trigger the workflow on pushes to any branch
     paths:
       - '**'  # Trigger the workflow for changes to any file
 
@@ -37,7 +88,7 @@ jobs:
           cp -r source_repo/bundle/* target_repo/bundle/
           cp source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile
           echo "Files synced to target repo."
-
+          
       - name: Commit and push changes to target repo
         run: |
           cd target_repo
@@ -45,7 +96,7 @@ jobs:
           git config user.email "actions@github.com"
           git add .
           git commit -m "Sync changes from source repo" || echo "No changes to commit"
-          git push origin main  # Push to the main branch of the target repo
+          git push origin HEAD  # Push to the same branch in the target repo
 
 
 # name: Sync Repos
