--- a/.github/workflows/correct.yml
+++ b/.github/workflows/correct.yml
@@ -50,7 +50,6 @@
 #           git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
 
 
-
 name: Sync Repos
 
 on:
@@ -86,14 +85,14 @@ jobs:
           path: target_repo
           ref: ${{ github.ref_name }}
 
-      - name: Debug: List files in source repo
+      - name: Debug List files in source repo
         run: |
           echo "Source repo bundle files:"
           find source_repo/bundle -type f -name "*.yaml"
           echo "Directory structure of source repo bundle:"
           ls -R source_repo/bundle
 
-      - name: Debug: List files in target repo
+      - name: Debug List files in target repo
         run: |
           echo "Target repo bundle files:"
           find target_repo/bundle -type f -name "*.yaml"
@@ -159,3 +158,4 @@ jobs:
             git push origin ${{ github.ref_name }}
           fi
         shell: /usr/bin/bash -e {0}
+
