--- a/.github/workflows/correct.yml
+++ b/.github/workflows/correct.yml
@@ -85,14 +85,14 @@ jobs:
           path: target_repo
           ref: ${{ github.ref_name }}
 
-      - name: Debug: List files in source repo
+      - name: Debug List files in source repo
         run: |
           echo "Source repo bundle files:"
           find source_repo/bundle -type f -name "*.yaml"
           echo "Directory structure of source repo bundle:"
           ls -R source_repo/bundle
 
-      - name: Debug: List files in target repo
+      - name: Debug List files in target repo
         run: |
           echo "Target repo bundle files:"
           find target_repo/bundle -type f -name "*.yaml"
